lead-scan/force-app/main/default/objects/Scan_Run__c/Scan_Run__c.object-meta.xml
<CustomObject>
    <description>One execution of the weekly lead scan, with its results, blocked candidates and errors.</description>
    <label>Scan Run</label>
    <nameField>
        <displayFormat>RUN-{00000}</displayFormat>
        <label>Scan Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>