lead-scan/force-app/main/default/objects/Scan_Run__c/fields/Below_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Below_Threshold__c</fullName>
    <description>Candidates rejected because their score was below the minimum.</description>
    <label>Below Threshold</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>