lead-scan/force-app/main/default/objects/Scan_Run__c/fields/Blocked_Layer_1__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Layer_1__c</fullName>
    <description>Candidates blocked by the exclusion list (customers, partners, competitors, disqualified).</description>
    <label>Blocked Layer 1</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>