lead-scan/force-app/main/default/objects/Scan_Run__c/fields/Blocked_Layer_2__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Layer_2__c</fullName>
    <description>Candidates blocked by matching on domain, email domain, Chamber of Commerce number or name.</description>
    <label>Blocked Layer 2</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>