lead-scan/force-app/main/default/objects/Scan_Run__c/fields/Blocked_Layer_3__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Layer_3__c</fullName>
    <description>Candidates blocked after review of a doubtful match.</description>
    <label>Blocked Layer 3</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>