lead-scan/force-app/main/default/objects/Scan_Run__c/fields/Candidates_Found__c.field-meta.xml
<CustomField>
    <fullName>Candidates_Found__c</fullName>
    <description>Number of candidates found before duplicate checks.</description>
    <label>Candidates Found</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>