lead-scan/force-app/main/default/objects/Scan_Run__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <description>Errors and warnings logged during the run.</description>
    <label>Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>