lead-scan/force-app/main/default/objects/Scan_Run__c/fields/Finished__c.field-meta.xml
<CustomField>
    <fullName>Finished__c</fullName>
    <description>Moment the run finished.</description>
    <label>Finished</label>
    <type>DateTime</type>
</CustomField>