lead-scan/force-app/main/default/objects/Scan_Run__c/fields/ICP_Version__c.field-meta.xml
<CustomField>
    <fullName>ICP_Version__c</fullName>
    <description>Version of the ideal customer profile used in this run.</description>
    <label>ICP Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>