lead-scan/force-app/main/default/objects/Scan_Run__c/fields/Leads_Created__c.field-meta.xml
<CustomField>
    <fullName>Leads_Created__c</fullName>
    <description>Number of leads created in this run.</description>
    <label>Leads Created</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>