lead-scan/force-app/main/default/objects/Scan_Run__c/fields/Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Model_Version__c</fullName>
    <description>Claude model version used in this run.</description>
    <label>Model Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>