lead-scan/force-app/main/default/objects/Scan_Run__c/fields/Run_Key__c.field-meta.xml
<CustomField>
    <fullName>Run_Key__c</fullName>
    <description>Unique key of the run (for example the scheduled week). Makes runs idempotent: a restart updates the same run.</description>
    <label>Run Key</label>
    <length>40</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <type>Text</type>
</CustomField>