lead-scan/force-app/main/default/objects/Scan_Run__c/fields/Signals_To_Existing__c.field-meta.xml
<CustomField>
    <fullName>Signals_To_Existing__c</fullName>
    <description>Signals logged as a task on an existing lead or account instead of a new lead.</description>
    <label>Signals To Existing Records</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>