lead-scan/force-app/main/default/objects/Scan_Run__c/fields/Started__c.field-meta.xml
<CustomField>
    <fullName>Started__c</fullName>
    <description>Moment the run started.</description>
    <label>Started</label>
    <type>DateTime</type>
</CustomField>